--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "coveralls": "^3.0.7",
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -88,7 +89,6 @@
     "eslint-plugin-jest": "^24.0.1",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-security": "^1.4.0",
-    "faker": "^5.1.0",
     "husky": "7.0.4",
     "jest": "^26.0.1",
     "lint-staged": "^11.0.0",
