refactor: refactored the unit test to include population along with docs [10023]

--- a/src/docs/components.yml
+++ b/src/docs/components.yml
@@ -9,6 +9,8 @@ components:
           type: string
         pop:
           type: number
+        population:
+          type: number
         state:
           type: string
         loc:
