--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.30.1",
     "mongoose": "^5.7.7",
+    "mongoose-field-encryption": "^7.0.1",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
