refactor: removed SMS environment variables [10028]

--- a/env/.env.development
+++ b/env/.env.development
@@ -11,15 +11,10 @@ OAUTH_CALLBACK_URI=http://localhost:3000/v1/auth/google/callback
 OAUTH_REDIRECT_SUCCESS_URI=/v1/docs
 OAUTH_REDIRECT_FAIL_URI=/v1/auth/failure
 
+# Encryption
+ENC_SECRET=some_key_here
+
 # Cache configs
 CACHE_HOST=localhost
 CACHE_PORT=6379
 CACHE_SECRET=secretCash1928
-
-# SMTP configuration options for the email service
-# For testing, you can use a fake SMTP service like Ethereal: https://ethereal.email/create
-SMTP_HOST=email-server
-SMTP_PORT=587
-SMTP_USERNAME=email-server-username
-SMTP_PASSWORD=email-server-password
-EMAIL_FROM=support@yourapp.com
