--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,7 +32,8 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTER }}/${{ env.IMAGE_NAME }}
-          tags: type=semver,pattern={{version}}
+          tags: |
+            type=semver,pattern={{version}}
 
       - name: Build and push docker image
         uses: docker/build-push-action@v4
